syntax = "proto3";

package input;

import "src/prover-input/proto/block.proto";
import "src/prover-input/proto/chain_config.proto";

option go_package = "github.com/kkrt-labs/zk-pig/src/prover-input/proto";

// ProverInput contains the minimal data needed for block execution and proof validation
message ProverInput {
  string version = 1;
  repeated Block blocks = 2;
  Witness witness = 3;
  ChainConfig chain_config = 4; 
}

message Witness {
  repeated bytes state = 1;
  repeated Header ancestors = 2;
  repeated bytes codes = 3;
}
